--- a/test/manual.html
+++ b/test/manual.html
@@ -14,7 +14,7 @@
         * { box-sizing: border-box; }
         body { margin: 0; background: var(--bg); color: var(--text); font-family: -apple-system, system-ui, sans-serif; line-height: 1.6; }
 
-
+```
     /* HEADER */
     .page-header { background: var(--card); border-bottom: 1px solid var(--border); padding: 20px 20px 0; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 8px rgba(0,0,0,0.06); }
     .header-top { display: flex; align-items: center; justify-content: space-between; margin-bottom: 14px; max-width: 800px; margin-left: auto; margin-right: auto; }
@@ -296,7 +296,7 @@
         <h2 id="onboarding">4. Onboarding New Members</h2>
         <p>The process is simple — members need only two things:</p>
         <ol>
-            <li>The URL: <strong>kevinpshan.github.io/test/</strong> (or prod URL when live)</li>
+            <li>The URL: <strong>kevinpshan.github.io/TMTools/test/</strong> (or prod URL when live)</li>
             <li>The sync code from you</li>
         </ol>
         <p>They open the app, tap <strong>Join Existing Club</strong>, enter the code, and everything downloads automatically — roster, fillers, and AI key. They are ready to use the app immediately.</p>
@@ -382,6 +382,7 @@
         document.querySelectorAll('.tab')[1].classList.add('active');
     }
 </script>
+```
 
 </body>
 </html>
